# Curs_SM

./: .gitattributes  .gitignore  README.md  run_all.bat
backend/: CMakeLists.txt  main.cpp
backend/include/: consumption_history.h  devices.h  logger.h  schedule.h  smart_home.h  strategy.h
backend/src/: consumption_history.cpp  devices.cpp  logger.cpp  schedule.cpp  smart_home.cpp  strategy.cpp
frontend/: api_client.py  api_worker.py  build_frontend.ps1  main.py  models.py  optimization.py  requirements.txt  resources.qrc  tariff.py  theme.py  weather.py
frontend/utils/: icon_utils.py
frontend/windows/: add_device_dialog.py  add_room_dialog.py  budget_dialog.py  device_item_widget.py  main_window.py  optimization_widget.py  schedule_editor.py  statistics_window_clean.py  tariff_config_dialog.py  weather_widget.py
